backends/drm: be smarter about picking the primary GPU

By default, we want the primary GPU to be one that displays are connected to, and if we're
on a laptop, one that the internal display is connected to.

BUG: 494749